syntax = "proto3";
package tax;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bluzelle/bluzelle-public/curium/x/tax/types";

// Msg defines the Msg service.
service Msg {
  rpc SetGasTaxBp(MsgSetGasTaxBp) returns (MsgSetGasTaxBpResponse);
  rpc SetTransferTaxBp(MsgSetTransferTaxBp) returns (MsgSetTransferTaxBpResponse);
  rpc SetTaxCollector(MsgSetTaxCollector) returns (MsgSetTaxCollectorResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSetGasTaxBp {
  string creator = 1;
  int64 bp = 2;
}

message MsgSetGasTaxBpResponse {
}

message MsgSetTransferTaxBp {
  string creator = 1;
  int64 bp = 2;
}

message MsgSetTransferTaxBpResponse {
}

message MsgSetTaxCollector {
  string creator = 1;
  string taxCollector = 2;
}

message MsgSetTaxCollectorResponse {
}

// this line is used by starport scaffolding # proto/tx/message